# path-conflict-detector

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  lib.rs  main.rs
src/analyzers/: categorizer.rs  manager_detector.rs  mod.rs  symlink_resolver.rs  version_extractor.rs
src/cli/: args.rs  mod.rs  runner.rs
src/core/: binary_info.rs  conflict_detector.rs  executable_scanner.rs  mod.rs  path_parser.rs
src/output/: formatter.rs  json_output.rs  mod.rs  types.rs
src/platform/: macos.rs  mod.rs  unix.rs  windows.rs  wsl.rs
