[package]
name = "path-conflict-detector"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Krishna"]
description = "A tool to detect and analyze PATH environment variable conflicts"
license = "MIT OR Apache-2.0"
keywords = ["cli", "path", "environment", "debugging", "tool"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "cargo", "wrap_help"] }

# Serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Path and file operations
walkdir = "2.4"

# Cross-platform utilities
which = "6.0"
regex = "1.10"
once_cell = "1.19"

# Colored output
colored = "2.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Platform-specific functionality
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processenv", "fileapi", "handleapi", "winnt", "winver"] }
widestring = "1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.27", features = ["process", "fs"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
pretty_assertions = "1.4"

[lib]
name = "path_conflict_detector"
path = "src/lib.rs"

[[bin]]
name = "path-conflict-detector"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
